[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.59"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2.4", features = [] }
winsafe = { version = "0.0.13", features = ["advapi", "shell"] }
lnk = "0.5.1"

[dependencies.windows]
version = "0.44"
features = [
  "Win32_System_WindowsProgramming",
  "Win32_Foundation",
  "Win32_UI_Shell",
  "Win32_Storage_FileSystem",
  "Win32_UI_Shell_Common",
  "implement"
]

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
